k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      containers:
        - image:  postgres
          name:  postgres
          ports:
            - containerPort: 5432 
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
