k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - image:  ujjwal25/multi-server
          name:  server
          ports:
            - containerPort: 5000 
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
