k8s/server-cluster-ip-service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  server-cluster-ip-service
spec:
  selector:
    component:  server
  type:  ClusterIP
  ports:
  - port:  5000
    targetPort:  5000
